@@ -854,72 +854,6 @@ ccss_style_draw_rectangle (ccss_style_t const	*self,
 			  cr, x, y, width, height);
 }
 
-bool
-ccss_style_get_color (ccss_style_t const	*self,
-		     double		*red,
-		     double		*green,
-		     double		*blue)
-{
-	ccss_color_t const *color;
-
-	g_return_val_if_fail (self, false);
-
-	color = gather_color (self, CCSS_PROPERTY_COLOR,
-			      _default_style.color);
-
-	*red = color->red;
-	*green = color->green;
-	*blue = color->blue;
-
-	return true;
-}
-
-bool
-ccss_style_get_background_color (ccss_style_t const	*self,
-				double			*red,
-				double			*green,
-				double			*blue)
-{
-	ccss_color_t const *color;
-
-	g_return_val_if_fail (self, false);
-
-	color = gather_color (self, CCSS_PROPERTY_BACKGROUND_COLOR,
-			      _default_style.bg_color);
-
-	*red = color->red;
-	*green = color->green;
-	*blue = color->blue;
-
-	return true;
-}
-
-bool
-ccss_style_get_border_color (ccss_style_t const	*self,
-			    double		*red,
-			    double		*green,
-			    double		*blue)
-{
-	ccss_color_t const *color;
-
-	g_return_val_if_fail (self, false);
-
-	/* FIXME hardcoding "left" for now. */
-
-	color = (ccss_color_t *) g_hash_table_lookup (
-			self->properties, 
-			(gpointer) CCSS_PROPERTY_BORDER_LEFT_COLOR);
-	if (NULL == color) {
-		color = _default_style.left_color;
-	}
-
-	*red = color->red;
-	*green = color->green;
-	*blue = color->blue;
-
-	return true;
-}
-
 void
 ccss_style_set_viewport (ccss_style_t	*self,
 			 int32_t	 x,
